manifests/deployment-echoserver-1-10.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
      - name: echo-server
        image: k8s.gcr.io/echoserver:1.10
        ports:
        - containerPort: 8080
