manifests/ingress-echoserver-self-signed.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  namespace: test
spec:
  tls:
  - hosts:
    - echo.localhost
    secretName: localhost-tls
  rules:
  - host: echo.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo-service
            port:
              number: 80
